Add support of Azure DevOps PAT

--- a/VsoBackupTool/VsoBackupTool/App.config
+++ b/VsoBackupTool/VsoBackupTool/App.config
@@ -7,12 +7,11 @@
   </configSections>
 
   <FileSystemConfiguration
-    BasePath="C:\Users\"
+    BasePath="E:\Save\"
     RemoveBackupAfterHowManyDays="10"/>
 
   <VsoConfiguration
-    ApiUsername=""
-    ApiPassword=""
+    ApiPat="*PersonalToken*"
     AllRepositoriesUrl="https://*.visualstudio.com/DefaultCollection/_apis/git/repositories?api-version=1.0"/>
 
   <appSettings>
