--- a/AzDoBackupTool/AzDoBackupTool/App.config
+++ b/AzDoBackupTool/AzDoBackupTool/App.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="FileSystemConfiguration" type="VsoBackup.Configuration.FileSystemConfiguration, VsoBackup.Configuration, Version=1.0.0.0, Culture=neutral"/>
-    <section name="VsoConfiguration" type="VsoBackup.Configuration.VsoConfiguration, VsoBackup.Configuration, Version=1.0.0.0, Culture=neutral"/>
+    <section name="FileSystemConfiguration" type="AzDoBackup.Configuration.FileSystemConfiguration, AzDoBackup.Configuration, Version=1.0.0.0, Culture=neutral"/>
+    <section name="VsoConfiguration" type="AzDoBackup.Configuration.VsoConfiguration, AzDoBackup.Configuration, Version=1.0.0.0, Culture=neutral"/>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
   </configSections>
 
